--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
                                     <h2 class="h5">Effecient</h2>
-                                    <p class="mb-0">Not everyone has millions of dollars to spend, and that's why we won't charge a fortune for our services. </p>
+                                    <p class="mb-0">The top 1% may be able to be wasteful, but most of us can't. Billing like we can is just plain wrong, so here's to watching mom clip coupons every Sundat as a kid.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
