--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                     <h2 class="h5">Private</h2>
-                                    <p class="mb-0">Since we don't have accounts we can't sell customer information. Even more importantly we wouldn't even if we could.</p>
+                                    <p class="mb-0">Selling customer data is no different from being a peeping tom, it's not just wrong, it's plain damn creepy. Just because you're big tech doesn't mean you're exempt.</p>
                                 </div>
                                 <div class="col h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
