--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <div class="col h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                     <h2 class="h5">Tailor Made</h2>
-                                    <p class="mb-0">Every person is different and that's why every resume should be different. The answer you give are unique, the results you get are unique. That's just as it should be.</p>
+                                    <p class="mb-0">Every person is different and that's why every resume should be different. The answers you give are unique, the results you get are unique. That's just as it should be.</p>
                                 </div>
                             </div>
                         </div>
