--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                                         </h1>
                                         <br />
                                         <p>Step 1: Navigate to the Page Entitled "Order"</p>
-                                        <p>Step 2: Fill in all the required fields and any optional fields that you think will help create the resume</p>
-                                        <p>Step 3: After you finish step 2, click next and then fill in the payment details.</p>
+                                        <p>Step 2: Click the button labeled "Start Order".</p>
+                                        <p>Step 3: Fill in the fields.</p>
                                         <p>Step 4: Click finish and that's it! Sit back and wait for the e-mail to arrive. It is almost always same day and if something were to happen and slow the process up we will be sure to let you know.</p>
+                                        <p>It can't get any easier! We promise you won't be upset either. If you are send us a message and we'll work something out with you.</p>
                                     </div>
                                 </div>
                             </div>
