--- a/order.html
+++ b/order.html
@@ -34,8 +34,8 @@
             <section class="bg-light py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Pay as you grow</h1>
-                        <p class="lead fw-normal text-muted mb-0">With our no hassle pricing plans</p>
+                        <h1 class="fw-bolder">Are you ready to get that job?!</h1>
+                        <p class="lead fw-normal text-muted mb-0">Click on the begin button below and follow any instructions that are on the screen.</p>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         
