--- a/order.html
+++ b/order.html
@@ -43,7 +43,7 @@
 
                         <script>
                         document.getElementById('payBtn').addEventListener('click', async () => {
-                            const response = await fetch('/create-checkout-session', {
+                            const response = await fetch('/server.js', {
                                 method: 'POST',
                             });
                             const data = await response.json();
