Update order.html and add form

--- a/order.html
+++ b/order.html
@@ -38,19 +38,68 @@
                         <p class="lead fw-normal text-muted mb-0">Click on the begin button below and follow any instructions that are on the screen.</p>
                     </div>
                     <div class="row gx-5 justify-content-center">
+
+                        <form action='#'>
+                            <p>
+                                <label for="name">Full Name:</label>
+                                <input type="text" id="name" name="name" required minlength="2" maxlength="42" size="21" />
+                            </p>                            
+                            <p>
+                                <label for="address">Address:</label>
+                                <textarea id="addr" name="address" rows="5" cols="25"></textarea>
+                            </p>
+                            <p>
+                                <label for="phone">Phone Number:</label>
+                                <input type="text" id="phone" name="phone" required minlength="1" maxlength="10" size="10" />
+                            </p>
+                            <p>
+                                <label for="email">Email:</label>
+                                <input type="email" id="email" name="email" required placeholder="youremail@example.com" minlength="5" maxlength="99" size="20" />
+                            </p>
+                            <p>
+                                <label for="job_title">Job title you're applying for:</label>
+                                <input type="text" id="title" name="title" minlength="3" maxlength="50" size="10" />
+                            </p>
+                            <p>
+                                <label for="link">URL to job posting:</label>
+                                <input type="text" id="link" name="link" size="10" />
+                            </p>
+                            <p>
+                                <label for="education">Education incl. dates and extracir. activities:</label>
+                                <textarea id="education" name="education" rows="10" cols=25"></textarea>
+                            </p>
+                            <p>
+                                <label for="jobs">Work History including location, contact info, supervisors, duties performed, reason for leaving:</label>
+                                <textarea id="jobs" name="jobs" rows="10" cols="25"></textarea>
+                            </p>
+                            <p>
+                                <label for="skills">Related Skills and Certifications:</label>
+                                <textarea for="skills" name="skills" rows="10" cols="25"></textarea>
+                            </p>
+                            <p>
+                                <fieldset>
+                                    <legend>Select preferred tone of cover letter and resume:</legend>
+                                    <div>
+                                        <input type="radio" id="pro" name="pro" value="professional" />
+                                        <label for="pro">Professional</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" id="friendly" name="friendly" value="friendly" />
+                                        <label for="friendly">Friendly</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" id="creative" name="creative" value="creative" />
+                                        <label for="creative">Creative</label>
+                                    </div>
+                                </fieldset>
+                            </p>
+                            <p>
+                                <label for="extra">Anything else you would like to add:</label>
+                                <textarea for="extra" name="extra" rows="10" cols="25"></textarea>
+                            </p>
+                        </form>
                         
                         <button id="payBtn">Pay $15</button>
-
-                        <script>
-                        document.getElementById('payBtn').addEventListener('click', async () => {
-                            const response = await fetch('/server.js', {
-                                method: 'POST',
-                            });
-                            const data = await response.json();
-                            window.location.href = data.url; // Redirect to Stripe Checkout
-                            });
-                        </script>
-                      
                     </div>
                 </div>
             </section>
