--- a/order.html
+++ b/order.html
@@ -1,127 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Rapid Resume - Craft your future with A.I.</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body class="d-flex flex-column">
-        <main class="flex-shrink-0">
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">Rapid Resume</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="order.html">Order</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <!-- Pricing section-->
-            <section class="bg-light py-5">
-                <div class="container px-5 my-5">
-                    <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Are you ready to get that job?!</h1>
-                        <p class="lead fw-normal text-muted mb-0">Click on the begin button below and follow any instructions that are on the screen.</p>
-                    </div>
-                    <div class="row gx-5 justify-content-center">
 
-                        <form action='#'>
-                            <p>
-                                <label for="name">Full Name:</label>
-                                <input type="text" id="name" name="name" required minlength="2" maxlength="42" size="21" />
-                            </p>                            
-                            <p>
-                                <label for="address">Address:</label>
-                                <textarea id="addr" name="address" rows="-5" cols="25"></textarea>
-                            </p>
-                            <p>
-                                <label for="phone">Phone Number:</label>
-                                <input type="text" id="phone" name="phone" required minlength="1" maxlength="10" size="10" />
-                            </p>
-                            <p>
-                                <label for="email">Email:</label>
-                                <input type="email" id="email" name="email" required placeholder="youremail@example.com" minlength="5" maxlength="99" size="20" />
-                            </p>
-                            <p>
-                                <label for="job_title">Job title you're applying for:</label>
-                                <input type="text" id="title" name="title" minlength="3" maxlength="50" size="10" />
-                            </p>
-                            <p>
-                                <label for="link">URL to job posting:</label>
-                                <input type="text" id="link" name="link" size="10" />
-                            </p>
-                            <p>
-                                <label for="education">Education incl. dates and extracir. activities:</label>
-                                <textarea id="education" name="education" rows="10" cols=25"></textarea>
-                            </p>
-                            <p>
-                                <label for="jobs">Work History including location, contact info, supervisors, duties performed, reason for leaving:</label>
-                                <textarea id="jobs" name="jobs" rows="10" cols="25"></textarea>
-                            </p>
-                            <p>
-                                <label for="skills">Related Skills and Certifications:</label>
-                                <textarea for="skills" name="skills" rows="10" cols="25"></textarea>
-                            </p>
-                            <p>
-                                <fieldset>
-                                    <legend>Select preferred tone of cover letter and resume:</legend>
-                                    <div>
-                                        <input type="radio" id="pro" name="pro" value="professional" />
-                                        <label for="pro">Professional</label>
-                                    </div>
-                                    <div>
-                                        <input type="radio" id="friendly" name="friendly" value="friendly" />
-                                        <label for="friendly">Friendly</label>
-                                    </div>
-                                    <div>
-                                        <input type="radio" id="creative" name="creative" value="creative" />
-                                        <label for="creative">Creative</label>
-                                    </div>
-                                </fieldset>
-                            </p>
-                            <p>
-                                <label for="extra">Anything else you would like to add:</label>
-                                <textarea for="extra" name="extra" rows="10" cols="25"></textarea>
-                            </p>
-                        </form>
-                        
-                        <button id="payBtn">Pay $15</button>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Rapid Resume - Craft your future with A.I.</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body class="d-flex flex-column">
+    <main class="flex-shrink-0">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Rapid Resume 2025</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
+                <a class="navbar-brand" href="index.html">Rapid Resume</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation"><span
+                        class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="order.html">Order</a></li>
+                    </ul>
                 </div>
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+        </nav>
+        <!-- Pricing section-->
+        <section class="bg-light py-5">
+            <div class="container px-5 my-5">
+                <div class="text-center mb-5">
+                    <h1 class="fw-bolder">A New World Awaits!</h1>
+                    <p class="lead fw-normal text-muted mb-0">Fill in the fields below and click Submit, your new resume will be sent to you within a few hours.</p>
+                </div>
+                <div class="row gx-5 justify-content-center">
+
+                    <form id="resumeForm">
+
+                        <div class="section">
+                            <label for="fullName">Full Name:</label>
+                            <input type="text" id="fullName" name="fullName" required>
+
+                            <label for="address">Address:</label>
+                            <input type="text" id="address" name="address" required>
+
+                            <label for="phone">Phone Number:</label>
+                            <input type="tel" id="phone" name="phone" required>
+
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+
+                        <div class="section">
+                            <label for="jobTitle">Job Title (What job are you applying for?):</label>
+                            <input type="text" id="jobTitle" name="jobTitle" required>
+
+                            <label for="jobLink">Link to the Job Posting (optional):</label>
+                            <input type="url" id="jobLink" name="jobLink">
+                        </div>
+
+                        <div class="section">
+                            <label for="education">Education (Include attendance dates & extracurriculars):</label>
+                            <textarea id="education" name="education" rows="5" required></textarea>
+                        </div>
+
+                        <div class="section">
+                            <label for="workHistory">Work History (Include company name, supervisor, duties, dates
+                                worked, address & phone):</label>
+                            <textarea id="workHistory" name="workHistory" rows="7" required></textarea>
+                        </div>
+
+                        <div class="section">
+                            <label for="skills">Skills & Certifications:</label>
+                            <textarea id="skills" name="skills" rows="4" required></textarea>
+                        </div>
+
+                        <div class="section">
+                            <label>Tone Preference for Resume & Cover Letter:</label>
+                            <div class="radio-group">
+                                <input type="radio" id="friendly" name="tone" value="friendly" required>
+                                <label for="friendly">Friendly</label><br>
+
+                                <input type="radio" id="professional" name="tone" value="professional">
+                                <label for="professional">Professional</label><br>
+
+                                <input type="radio" id="creative" name="tone" value="creative">
+                                <label for="creative">Creative</label>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="section">
+                            <label for="extraInfo">Anything You Want to Add:</label>
+                            <textarea id="extraInfo" name="extraInfo" rows="4"></textarea>
+                        </div>
+
+                        <input type="submit" value="Submit">
+
+                    </form>
+
+                    <button id="payBtn">Pay $15</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Footer-->
+    <footer class="bg-dark py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white">Copyright &copy; Rapid Resume 2025</div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="#!">Privacy</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Terms</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
