--- a/order.html
+++ b/order.html
@@ -103,7 +103,7 @@
                             <textarea id="extraInfo" name="extraInfo" rows="4"></textarea>
                         </div>
 
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Submit" class="form-submit-button">
 
                     </form>
 
