--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8 col-xl-6">
-                            <form action="https://formsubmit.co/rapidresumeonline@proton.me" method="POST">
+                            <form action="https://formsubmit.co/d410c15f337f6268b62ccad833d205eb" method="POST">
                                 <!-- Replace "your@email.com" with your email address -->
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Full Name</label>
@@ -104,3 +104,4 @@
 </body>
 
 </html>
+
