--- a/order.html
+++ b/order.html
@@ -47,23 +47,35 @@
                     <form id="resumeForm">
 
                         <div class="section">
-                            <label for="fullName">Full Name:</label>
+                            <label for="fullName">First Name:</label>
                             <input type="text" id="fullName" name="fullName" required>
 
-                            <label for="address">Address:</label>
-                            <input type="text" id="address" name="address" required>
+                            <label for="middleName">Middle Name:</label>
+                            <input type="text" id="middleName" name="middleName" required>
+
+                            <label for="lastName">Last Name:</label>
+                            <input type="text" id="lastName" name="lastName" required>
+
+                            <label for="address1">Address Line 1:</label>
+                            <input type="text" id="address1" name="address1" required>
+
+                            <label for="address2">Address Line 2:</label>
+                            <input type="text" id="address2" name="address2" required>
+
+                            <label for="address3">Address Line 3:</label>
+                            <input type="text" id="address3" name="address3" required>
 
                             <label for="phone">Phone Number:</label>
                             <input type="tel" id="phone" name="phone" required>
 
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" required>
+
+                            <label for="plink">Personal Link:</label>
+                            <input type="text" id="plink" name="plink">
                         </div>
 
                         <div class="section">
-                            <label for="jobTitle">Job Title (What job are you applying for?):</label>
-                            <input type="text" id="jobTitle" name="jobTitle" required>
-
                             <label for="jobLink">Link to the Job Posting (optional):</label>
                             <input type="url" id="jobLink" name="jobLink">
                         </div>
@@ -85,17 +97,14 @@
                         </div>
 
                         <div class="section">
-                            <label>Tone Preference for Resume & Cover Letter:</label>
-                            <div class="radio-group">
-                                <input type="radio" id="friendly" name="tone" value="friendly" required>
-                                <label for="friendly">Friendly</label><br>
+                            <label for="reference1">Reference 1:</label>
+                            <input type="text" id="reference1" name="reference1">
 
-                                <input type="radio" id="professional" name="tone" value="professional">
-                                <label for="professional">Professional</label><br>
+                            <label for="reference2">Reference 2:</label>
+                            <input type="text" id="reference2" name="reference2">
 
-                                <input type="radio" id="creative" name="tone" value="creative">
-                                <label for="creative">Creative</label>
-                            </div>
+                            <label for="reference3">Reference 3:</label>
+                            <input type="text" id="reference3" name="reference3">
                         </div>
                         <br>
                         <div class="section">
@@ -133,5 +142,6 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
+
 
 </html>
