--- a/order.html
+++ b/order.html
@@ -39,8 +39,8 @@
         <section class="bg-light py-5">
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="fw-bolder">A New World Awaits!</h1>
-                    <p class="lead fw-normal text-muted mb-0">Fill in the fields below and click Submit, your new resume will be sent to you within a few hours.</p>
+                    <h1 class="fw-bolder">Instructions for Placing Order</h1>
+                    <p class="lead fw-normal text-muted mb-0">1. Fill out this form<br>2. Fill out payment details<br>3. Click submit and your resume will be emailed to you</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
 
@@ -145,3 +145,4 @@
 
 
 </html>
+
